IOSCE-370, IOSCE-371, IOSCE-376 Added two extra tegs in settings file and import file bug fix.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -984,8 +984,8 @@ individualSPDataChangeMsg=Dieser SP hat seine pers\u00F6nlichen Daten ge\u00F6nd
 spDataPullNotificationMsg=Dies wird die Daten in der Datenbank mit den \u00C4nderungen des Benutzers \u00FCberschreiben. Sind Sie sicher, dass Sie ohne \u00DCberpr\u00FCfung fortfahren wollen?
 acceptChanges=\u00C4nderungen akzeptieren
 discardChanges=\u00C4nderungen verwerfen
-osceSPPortalDataMismatch=Keine korrekten Daten von SP-Portal für AnamnesisChecksValue gefunden So können Sie nicht überprüfen oder ändern Daten sp.
-dataSaveFailure=System konnte Ihre ausgewählte Operation nicht ausführen versuchen Sie es erneut
+osceSPPortalDataMismatch=Keine korrekten Daten von SP-Portal f\u00FCr AnamnesisChecksValue gefunden So k\u00F6nnen Sie nicht \u00FCberpr\u00FCfen oder \u00E4ndern Daten sp.
+dataSaveFailure=System konnte Ihre ausgew\u00E4hlte Operation nicht ausf\u00FChren versuchen Sie es erneut
 dataChange=Changed
 editRequest=Request
 planSPTraining = SP Trainings planen
@@ -997,8 +997,8 @@ proposeOsceDay=OSCE-Tag vorschlagen
 scheduleTraining=Training festlegen
 removeTrainingDay=Entfernen Trainingstag
 removeOsceDay=OSZE-Tag entfernen
-possibleSpTraining=Mögliche sp Ausbildung
-possibleOsceDay=Mögliche OSZE Datum
+possibleSpTraining=M\u00F6gliche sp Ausbildung
+possibleOsceDay=M\u00F6gliche OSZE Datum
 proposeTrainingDays=Einen Trainingstage
 proposeOsceDays=Einen Tag OSZE
 block=Block
@@ -1006,7 +1006,7 @@ splitBlock=In zwei Bl\u00F6cke aufteilen
 joinBlock=Bl\u00F6cke verbinden
 startSurveyConfirmation=Sind Sie sicher, dass Sie die Umfrage starten wollen? Es ist nicht mehr m\u00F6glich die eingegebenen Termine zu \u00E4ndern nachdem die Umfrage gestarted wurde. Stellen Sie bitte sicher, dass alle Angaben korrekt sind!
 trainingDateIsAfterOsceDate=Es wurden m\u00F6gliche Trainingsdaten definiert nach dem letzten OSCE Datum. Sind Sie sicher, dass Sie fortfahren wollen?
-noPISFoundForSemester=Es wurden noch keine SPs dem aktuellen Semester zugewiesen. Wollen Sie alle aktiven SPs zuweisen oder eine manuelle Zuweisung übernehmen?
+noPISFoundForSemester=Es wurden noch keine SPs dem aktuellen Semester zugewiesen. Wollen Sie alle aktiven SPs zuweisen oder eine manuelle Zuweisung \u00FCbernehmen?
 assignAllActiveSP=Alle aktiven SPs zuweisen
 assignSPManually=Manuelle Zuweisung jetzt vornehmen
 noOsceOrTrainingdateProposed=Umfrage kann nicht gestarted werden da noch keine Vorschl\u00E4ge f\u00FCr Trainingstermine und OSCEs erstellt wurden. Wollen Sie diese nun erstellen?
@@ -1018,19 +1018,19 @@ schedule=Planen
 roleNotDefined=Bevor Trainings geplant werden k\u00F6nnen m\u00FCssen f\u00FCr alle OSCE-Posten Rollen definiert werden!
 timeTo=bis
 inValidTimeProvided=Ung\u00FCltige Zeit angegeben.
-pleaseSelectRole=Bitte wählen Sie StandardizedRole zu Trainingsplan
-ignoreTrainingBlocks=Ignorieren Trainingsblöcken
+pleaseSelectRole=Bitte w\u00E4hlen Sie StandardizedRole zu Trainingsplan
+ignoreTrainingBlocks=Ignorieren Trainingsbl\u00F6cken
 suggestedTraining=Trainingsvorschl\u00E4ge
 morning=Morgen
 afterNoon=Nachmittag
 overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
-noSuggestionsFound=Keine Vorschläge sind für den gegebenen Monat gefunden
-exportChecklistQR=QR-Code für Checkliste exportieren
+noSuggestionsFound=Keine Vorschl\u00E4ge sind f\u00FCr den gegebenen Monat gefunden
+exportChecklistQR=QR-Code f\u00FCr Checkliste exportieren
 
-addOption =Option hinzufügen
-addCriteria = Kriterium hinzufügen
+addOption =Option hinzuf\u00FCgen
+addCriteria = Kriterium hinzuf\u00FCgen
 itemType = Item Type
 optionType = Option Type
 isRegressionItem = Is Regression Item 
@@ -1042,28 +1042,28 @@ editSection = Abschnitt bearbeiten
 deleteTab = Tab l\u00F6schen
 optionValueErrMessage = Wert muss eine Zahl sein
 optionValueEmptyMessage = Wert darf nicht leer sein
-downloadeOSCE = Download für eOSCE
-downloadiOSCE = Download für iOSCE
+downloadeOSCE = Download f\u00FCr eOSCE
+downloadiOSCE = Download f\u00FCr iOSCE
 
 exporteOSCE = eOSCE exportieren
 exportiOSCE = iOSCE exportieren
-osceScreenSaverText=Text für Bildschirmschoner
+osceScreenSaverText=Text f\u00FCr Bildschirmschoner
 exportQRCode=QR-Code exportieren
 
 bucketInformation=Bucket informationen
 settingPassword=Passwort setzen
-backUpPeriod=Backup Periodizität
+backUpPeriod=Backup Periodizit\u00E4t
 timeUnit=Zeiteinheit
-encryptionType=Verschlüsselungstyp
-pointNxtExaminee=Auf nächsten Prüfling hinweisen
+encryptionType=Verschl\u00FCsselungstyp
+pointNxtExaminee=Auf n\u00E4chsten Pr\u00FCfling hinweisen
 examReviewMode=Is review mode
-symmetricKey=Symmetrische Verschlüsselung
+symmetricKey=Symmetrische Verschl\u00FCsselung
 bucketParameters=Bucket informationen
 osceSettings=OSCE Einstellungen
 otherInformation=Weitere informationen
-noSettingsForOsceError=Für diesen OSCE sind keine Einstellungen vorhanden
-exportSettingsQRCode=QR-Code für Einstellungen exportieren
-exportSettingsXml=XML für Einstellungen exportieren
+noSettingsForOsceError=F\u00FCr diesen OSCE sind keine Einstellungen vorhanden
+exportSettingsQRCode=QR-Code f\u00FCr Einstellungen exportieren
+exportSettingsXml=XML f\u00FCr Einstellungen exportieren
 bucketType=Bucket-Typ
 
 eOSCE = eOSCE
@@ -1075,28 +1075,30 @@ credentialsMustNotBeEmpty=Credentials value must not be empty
 optionNameSizeError = Name muss aus weniger als 50 Zeichen bestehen
 autoSelection=Automatische Antwort-Auswahl
 screenSaverTime=Bildschirmschoner nach (in Minuten)
-backUpPeriodMustBeInt=Backup Periodizität muss eine Zahl sein
+backUpPeriodMustBeInt=Backup Periodizit\u00E4t muss eine Zahl sein
 screenSaverTimeMustBeInt='Bildschirmschoner nach' muss eine Zahl sein
 
-formativeStudentAssignError = Zu einem formativen OSCE können keine Studenten im Voraus zugeordnet werden
+formativeStudentAssignError = Zu einem formativen OSCE k\u00F6nnen keine Studenten im Voraus zugeordnet werden
 isFormativeOsce = Formativer OSCE
 exportFormativeOsceError = Ein formativer OSCE kann nicht nach eOSCE exportiert werden
 
-deleteOptionError = Option konnte nicht gelöscht werden, da die Checkliste verwendet wird
-deleteCriteriaError = Kriterium konnte nicht gelöscht werden, da die Checkliste verwendet wird
-deleteQuestionError = Frage konnte nicht gelöscht werden, da die Checkliste verwendet wird
-deleteTopicError = Thema konnte nicht gelöscht werden, da die Checkliste verwendet wird
-deleteTabError = Tab konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteOptionError = Option konnte nicht gel\u00F6scht werden, da die Checkliste verwendet wird
+deleteCriteriaError = Kriterium konnte nicht gel\u00F6scht werden, da die Checkliste verwendet wird
+deleteQuestionError = Frage konnte nicht gel\u00F6scht werden, da die Checkliste verwendet wird
+deleteTopicError = Thema konnte nicht gel\u00F6scht werden, da die Checkliste verwendet wird
+deleteTabError = Tab konnte nicht gel\u00F6scht werden, da die Checkliste verwendet wird
 
-checklistQRCode=QR-Code für Checkliste
-exportSettingsQR=QR-Code für Einstellungen
+checklistQRCode=QR-Code f\u00FCr Checkliste
+exportSettingsQR=QR-Code f\u00FCr Einstellungen
 checklistQuestions=Fragen
 
 importFilesProcessed = Keine verarbeiteten Dateien
 fetchFilesFromCloud = Dateien vom Server laden
 
-backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
+backUpPeriodLengthError=Backup Periodizit\u00E4t darf nicht mehr als 2 Stellen haben
 ratio=Anteil (in %)
 topicFactor=Statistischer Faktor
-ratioExceedError=Aufaddierte Prozentzahlen dürfen 100% nicht übersteigen
-backUpPeriodMaxLengthError=Backup Periodizität darf nicht mehr als 
+ratioExceedError=Aufaddierte Prozentzahlen d\u00FCrfen 100% nicht \u00FCbersteigen
+backUpPeriodMaxLengthError=Backup Periodizit\u00E4t darf nicht mehr als 
+webServicePath=Pfad f\u00FCr Webservice
+registerDevicePath=Path f\u00FCr Ger\u00E4teregistrierung
