--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1113,3 +1113,5 @@ ratio=Anteil (in %)
 topicFactor=Statistischer Faktor
 ratioExceedError=Aufaddierte Prozentzahlen dürfen 100% nicht übersteigen
 backUpPeriodMaxLengthError=Backup Periodizität darf nicht mehr als 
+webServicePath=Pfad f\u00FCr Webservice
+registerDevicePath=Path f\u00FCr Ger\u00E4teregistrierung
