--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1096,3 +1096,5 @@ ratio=Ratio (in %)
 topicFactor=Statistic factor
 ratioExceedError=Overall percentage must not exceed 100
 backUpPeriodMaxLengthError=Backup period must not be greater than 
+webServicePath=Web service path
+registerDevicePath=Register device path
