--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1098,3 +1098,7 @@ ratioExceedError=Overall percentage must not exceed 100
 backUpPeriodMaxLengthError=Backup period must not be greater than 
 webServicePath=Web service path
 registerDevicePath=Register device path
+
+examinerComment = Examiner Comment
+audioNotes = Audio notes
+summary = Summary
