--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1102,3 +1102,7 @@ ratioExceedError=Aufaddierte Prozentzahlen d\u00FCrfen 100% nicht \u00FCbersteig
 backUpPeriodMaxLengthError=Backup Periodizit\u00E4t darf nicht mehr als 
 webServicePath=Pfad f\u00FCr Webservice
 registerDevicePath=Path f\u00FCr Ger\u00E4teregistrierung
+
+examinerComment = Examiner Comment
+audioNotes = Audio notes
+summary = Summary
