IOSCE-267 Added validation for checklist options while exporting and downloading iOSCE exam file.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1106,3 +1106,4 @@ registerDevicePath=Path f\u00FCr Ger\u00E4teregistrierung
 examinerComment = Examiner Comment
 audioNotes = Audio notes
 summary = Summary
+checklistOptionWarning = Bitte \u00FCberpr\u00FCfen sie folgende Items in den aufgef\u00FChrten Checklisten:
