--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1102,3 +1102,4 @@ registerDevicePath=Register device path
 examinerComment = Examiner Comment
 audioNotes = Audio notes
 summary = Summary
+checklistOptionWarning = Please verify following checklist questions and provide appropriate checklist options :
