--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceMessages_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceMessages_cn.properties
@@ -2,3 +2,4 @@ diffentOsceDateDateWarning=Es wurden bereits andere Daten als OSCE-Tage definier
 selectedMultipleConsecutiveDays=Sind Sie sicher, dass Sie OSCEs an {0} aufeinanderfolgenden Tagen vorschlagen m\u00F6chten?
 trainingOverlapingMsg=there Another training is taking place from {0} to {1}. Are you sure you want to schedule an overlapping training?
 topicFactorMustBeNumeric={0} muss eine Zahl sein
+checklistOptionRequireMsg =   require atleast  {0} checklist options
