--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceMessages_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceMessages_en.properties
@@ -2,3 +2,4 @@ diffentOsceDateDateWarning=Different dates were already defined as OSCE days. Th
 selectedMultipleConsecutiveDays=Are you sure you want to propose OSCE days on {0} consecutive days?
 trainingOverlapingMsg=there Another training is taking place from {0} to {1}. Are you sure you want to schedule an overlapping training?
 topicFactorMustBeNumeric={0} must be numeric value
+checklistOptionRequireMsg =  require atleast  {0} checklist options
