--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1119,3 +1119,4 @@ registerDevicePath=Path f\u00FCr Ger\u00E4teregistrierung
 examinerComment = Examiner Comment
 audioNotes = Audio notes
 summary = Summary
+checklistOptionWarning = Please verify following checklist questions and provide appropriate checklist options :
