--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1103,3 +1103,5 @@ examinerComment = Examiner Comment
 audioNotes = Audio notes
 summary = Summary
 checklistOptionWarning = Please verify following checklist questions and provide appropriate checklist options :
+#Added for OMS-148
+showDeletedSp=Show deleted SP
