--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1120,3 +1120,5 @@ examinerComment = Examiner Comment
 audioNotes = Audio notes
 summary = Summary
 checklistOptionWarning = Please verify following checklist questions and provide appropriate checklist options :
+#Added for OMS-148
+showDeletedSp=Gel\u00f6schte SP anzeigen
