--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1109,3 +1109,5 @@ summary = Summary
 checklistOptionWarning = Bitte \u00FCberpr\u00FCfen sie folgende Items in den aufgef\u00FChrten Checklisten:
 #Added for OMS-148
 showDeletedSp=Gel\u00f6schte SP anzeigen
+#Added for OMS-150
+showComments=Kommentare anzeigen
