--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1122,3 +1122,5 @@ summary = Summary
 checklistOptionWarning = Please verify following checklist questions and provide appropriate checklist options :
 #Added for OMS-148
 showDeletedSp=Gel\u00f6schte SP anzeigen
+#Added for OMS-150
+showComments=Kommentare anzeigen
