--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1105,3 +1105,5 @@ summary = Summary
 checklistOptionWarning = Please verify following checklist questions and provide appropriate checklist options :
 #Added for OMS-148
 showDeletedSp=Show deleted SP
+#Added for OMS-150
+showComments=Show comments
