--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1111,3 +1111,5 @@ checklistOptionWarning = Bitte \u00FCberpr\u00FCfen sie folgende Items in den au
 showDeletedSp=Gel\u00f6schte SP anzeigen
 #Added for OMS-150
 showComments=Kommentare anzeigen
+#Added for OMS-160.
+printHonorarabrechnungPdf=Honorarabrechnung
