--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1124,3 +1124,5 @@ checklistOptionWarning = Please verify following checklist questions and provide
 showDeletedSp=Gel\u00f6schte SP anzeigen
 #Added for OMS-150
 showComments=Kommentare anzeigen
+#Added for OMS-160.
+printHonorarabrechnungPdf=Honorarabrechnung
