--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1107,5 +1107,8 @@ checklistOptionWarning = Please verify following checklist questions and provide
 showDeletedSp=Show deleted SP
 #Added for OMS-150
 showComments=Show comments
+#Added for OMS-151.
+back=Back
+forward=Forward
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
