--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1112,7 +1112,10 @@ showDeletedSp=Gel\u00f6schte SP anzeigen
 #Added for OMS-150
 showComments=Kommentare anzeigen
 #Added for OMS-151.
-back=zurück
-forward=vorwärts
+back=zur\u00fcck
+forward=vorw\u00e4rts
+#Added for OMS-155
+scarSavingFailure=System kann neue Narbe oder Narben Update Zuordnung zu SP erstellen
+scarEditConfirmation=Dieses Merkmal ist bereits mindestens einem SP zugeordnet. Bitte best\u00e4tigen sie, dass die \u00c4nderung f\u00fcr alle SPs erfolgt.
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
