--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1110,5 +1110,8 @@ showComments=Show comments
 #Added for OMS-151.
 back=Back
 forward=Forward
+#Added for OMS-155
+scarSavingFailure=System can't create new scar or update scar assignment to SP
+scarEditConfirmation=This feature is already assigned to at least one SP. Please confirm that you would like to change it for all SPs.
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
