--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1130,5 +1130,8 @@ forward=vorw\u00e4rts
 #Added for OMS-155
 scarSavingFailure=System kann neue Narbe oder Narben Update Zuordnung zu SP erstellen
 scarEditConfirmation=Dieses Merkmal ist bereits mindestens einem SP zugeordnet. Bitte best\u00e4tigen sie, dass die \u00c4nderung f\u00fcr alle SPs erfolgt.
+#Added for OMS-158
+reserveRoomSp=Reserve SP Zimmer
+reserveRoomAssignFailure=System cann't Reserveraum zuweisen versuchen Sie es erneut
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
