--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1133,5 +1133,8 @@ scarEditConfirmation=Dieses Merkmal ist bereits mindestens einem SP zugeordnet. 
 #Added for OMS-158
 reserveRoomSp=Reserve SP Zimmer
 reserveRoomAssignFailure=System cann't Reserveraum zuweisen versuchen Sie es erneut
+#Added for OMS-159
+lunchBreakForPdf=Mittagspause
+coffeeBreak=Kaffeepause
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
