--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1116,5 +1116,8 @@ scarEditConfirmation=This feature is already assigned to at least one SP. Please
 #Added for OMS-158
 reserveRoomSp=Reserve SP room
 reserveRoomAssignFailure=System cann't assign reserve room please try again
+#Added for OMS-159
+lunchBreakForPdf=Lunch break
+coffeeBreak=Coffee break
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
