--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1125,3 +1125,5 @@ lunchBreakForPdf=Mittagspause
 coffeeBreak=Kaffeepause
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
+#Added for OMS-161.
+updateSPsAssignment=Update SPs Zuordnung
