--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1121,3 +1121,4 @@ lunchBreakForPdf=Lunch break
 coffeeBreak=Coffee break
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
+updateSPsAssignment=Update SPs assignment
