--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1138,3 +1138,5 @@ lunchBreakForPdf=Mittagspause
 coffeeBreak=Kaffeepause
 #Added for OMS-160.
 printHonorarabrechnungPdf=Honorarabrechnung
+#Added for OMS-161.
+updateSPsAssignment=Update SPs Zuordnung
