OMS-189 Export Fertigkeit to iOSCE

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -707,7 +707,7 @@ information = Information
 roleTemplateDeleteWarning= Vorlage kann nicht gel\u00F6scht werden, da sie in einer Rolle verwendet wird.
 roleTemplateDeleteMessage=Rollenvorlage wurde erfolgreich gel\u00F6scht!
 
-csvFileError = Datei nicht verarbeitet. student_id, name und prename sind Pflichtfelder!
+csvFileError = Datei nicht verarbeitet. email_id, name und prename sind Pflichtfelder!
 statisticsEvaluation = Statistische Auswertung
 createOsce=OSCE erstellen
 osceAssignments=Zuweisungen
