--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -707,7 +707,7 @@ information = Information
 roleTemplateDeleteWarning = Template can not be deleted because it is used in a role definition.
 roleTemplateDeleteMessage = Template successfully deleted!
 
-csvFileError = File not processed. student_id, name and prename are required fields!
+csvFileError = File not processed. email_id, name and prename are required fields!
 statisticsEvaluation = Statistical Evaluation
 createOsce=Create an OSCE
 osceAssignments=Assignments
